init categorie menu

--- a/mamikoFrontEnd/src/index.html
+++ b/mamikoFrontEnd/src/index.html
@@ -16,7 +16,7 @@
           https://*.herokuapp.com
           ws: http://localhost:*;
     ">
-    <title>Mamiko</title>
+    <title>Benjamin&Franklin</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
